[gd_scene load_steps=2 format=3 uid="uid://cdlhqur2fqlq7"]

[ext_resource type="Script" path="res://multiplayer-connection-screen.gd" id="1_jufa4"]

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jufa4")

[node name="host" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 139.0
offset_top = 133.0
offset_right = 236.0
offset_bottom = 188.0
text = "host
"

[node name="join" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 262.0
offset_top = 135.0
offset_right = 359.0
offset_bottom = 190.0
text = "join
"

[node name="start_browl" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 376.0
offset_top = 135.0
offset_right = 473.0
offset_bottom = 190.0
text = "Start Browl"

[node name="Phone" type="LineEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 137.0
offset_top = 90.0
offset_right = 549.0
offset_bottom = 121.0

[node name="Email" type="LineEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 134.0
offset_top = 51.0
offset_right = 494.0
offset_bottom = 82.0

[node name="Name" type="LineEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 132.0
offset_top = 14.0
offset_right = 413.0
offset_bottom = 45.0
text = "test"

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 65.0
offset_top = 22.0
offset_right = 116.0
offset_bottom = 48.0
text = "Name:"

[node name="Label2" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 69.0
offset_top = 57.0
offset_right = 120.0
offset_bottom = 83.0
text = "Email:"

[node name="Label3" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 70.0
offset_top = 93.0
offset_right = 121.0
offset_bottom = 119.0
text = "Phone:"

[node name="ConnectionStatusLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 13.0
offset_right = 81.0
offset_bottom = 39.0
text = "Connection Status:"

[node name="ConnectionStatus" type="Label" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 14.0
offset_right = 295.0
offset_bottom = 40.0
text = "Not Connected"

[node name="PlayerListLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 42.0
offset_right = 173.0
offset_bottom = 68.0
text = "Player List:"

[node name="PlayerList" type="Label" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 43.0
offset_right = 295.0
offset_bottom = 69.0
text = "Not Connected"

[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="start_browl" to="." method="_on_start_browl_pressed"]
